--- a/letter.html
+++ b/letter.html
@@ -1,32 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <style>
 
-    </style>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <style>
+    header {
+      position: relative;
+      text-align: center;
+      padding-top: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    header.container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+
+    }
+
+    .logo {
+      width: 100px;
+      height: auto;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .logo:hover {
+      transform: scale(2);
+    }
 
 
-  <body>
-    <img src="90.png" alt="Siena Logo with Dog" width="75" height="50">
-    <h2>Siena College</h2>
+    h1 {
+      color: #006B54;
+      animation: colorLoop 5s ease-in-out infinite;
+    }
 
-    <address>
-        <em><b>Prof. Alex Hartley</b></em><br>
-        <em>Creative Arts Department</em><br>
-        <em>Siena College</em><br>
-        <em>Paintsville, NY 10101,</em><br>
-        <em>USA</em><br>
-        
-        <em><b>Tel:</b>987-654-3210</em><br>
-        <em><b>Email:</b> <a href="mailto:contact@miart.edu">contact@miart.edu</a> </em><br>
-        <br><em>26 January 2024</em><br>
-        <br><br>
-        
+    @keyframes colorLoop {
+      0% {
+        color: #006B54;
+      }
+
+      50% {
+        color: #FCC917;
+      }
+
+      100% {
+        color: #006B54;
+      }
+    }
+
+    @keyframes right-spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes left-spin {
+      0% {
+        transform: rotate(360deg);
+      }
+
+      100% {
+        transform: rotate(0deg);
+      }
+    }
+
+    .left-logo {
+      width: 200px;
+      height: auto;
+      animation: left-spin 5s linear infinite;
+    }
+
+    .right-logo {
+      width: 200px;
+      height: auto;
+      animation: right-spin 5s linear infinite;
+    }
+
+    .logo-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+      gap: 150px;
+    }
+
+    h2 {
+      margin-left: 30px;
+    }
+
+    h3 {
+      margin-left: 30px;
+    }
+
+    p {
+      margin-left: 30px;
+      text-align: justify;
+    }
+
+    .description {
+      margin-left: 30px;
+      display: block;
+    }
+
+
+
+    body {
+      margin: 30px;
+    }
+
+    .content {
+      width: 80%;
+      margin: 10px auto;
+      padding: 0 30px;
+    }
+  </style>
+</head>
+
+
+<header>
+  <div class="logo-container">
+    <!-- Left logo -->
+    <img src="90.png" alt="Siena Logo with Dog" class="left-logo">
+
+    <!-- Center (hover animation) logo -->
+    <img src="90.png" alt="Siena Logo with Dog" class="logo">
+
+    <!-- Right Logo-->
+    <img src="90.png" alt="Siena Logo with Dog" class="right-logo">
+  </div>
+
+ 
+
+  
+
+</header>
+
+<body>
+  <div class="content">
+
+    <h1 style="text-align: center;">Siena College</h1>
+
+    <address style="text-align: right; margin-right: 0px;">
+      <em><b>Prof. Alex Hartley</b></em><br>
+      <em>Creative Arts Department</em><br>
+      <em>Siena College</em><br>
+      <em>Paintsville, NY 10101,</em><br>
+      <em>USA</em><br>
+
+      <em><b>Tel:</b> 987-654-3210</em><br>
+      <em><b>Email:</b> <a href="mailto:contact@miart.edu">contact@miart.edu</a> </em><br>
+      <br><em>26 January 2024</em><br>
+      <br><br>
+
     </address>
 
-    <address>
+    <address style="margin-left: 30px;">
       <em><b>Mr. Jordan Canvas</b></em><br>
       <em>987 Palette Ave</em><br>
       <em>Brushfield, BF8 Y6Z</em><br>
@@ -34,5 +175,98 @@
     </address>
 
     <h2>Re: Inquiry about Art Program</h2>
-  </body>
+
+
+    <p>Dear Jordan,<br>
+      <br>Thank you for expressing interest in our Creative arts program at Siena College.
+      I'm here to provide detailed information as per your queries.
+    </p>
+
+    <h3>Program Start Dates</h3>
+
+    <p>
+      Our program is flexible regarding start dates, but we recommend aligning with
+      our academic semesters for a smoother experience. <br>Our start dates are:
+    </p>
+
+    <div style=margin-left:40px>
+      <ul>
+        <li>Fall Semester: 5 September 2024</li>
+        <li>Winter Semester: 7 January 2025</li>
+        <li>Spring Semester: 11 April 2025</li>
+      </ul>
+    </div>
+
+    <p>
+      Please indicate your preferred starting semester.
+      Additional details about our academic calendar can be found on our
+      <a href="https://www.siena.edu/resources/academic-calendar/" target="_blank"> website</a>.
+    </p>
+
+    <h3>Available Courses</h3>
+
+    <p>
+      Our art program offers a diverse range of courses, focusing on both traditional
+      and modern artistic techniques. Your enthusiasm for contemporary art techniques
+      is particularly exciting. Here are the courses that might interest you:
+    </p>
+
+    <div style=margin-left:40px>
+      <ol>
+        <li>Modern Digital Art and Its Cultural Impact.</li>
+        <li>Interactive Media Art and Virtual</li>
+        <li>Sculpture Techniques: From Clay to Digital Models.</li>
+      </ol>
+    </div>
+
+    <p>
+      One of the courses that might interest you is "Chemical Reactions in Art",
+      where we will explore molecules like Glucose (C<sub>6</sub>H<sub>12</sub>0<sub>6</sub>)
+      and their role in conservation techniques.
+
+      <br><br>We'd appreciate more details on your specific interests within these areas,
+      including any particular projects or research themes you're considering.
+    </p>
+
+    <h3>Artistic Inspirations</h3>
+
+    <p>
+      It's great to hear about your interest in the historical influences on modern art.
+      Here are some of my favorite movements and their impact:
+    </p>
+
+
+    <p>
+      Impressionism
+      <span class="description">Characterized by small, thin brush strokes and emphasis on accurate depiction of light.
+        It has profoundly influenced the approach to outdoor painting.</span>
+
+      Abstract Expressionism
+      <span class="description">This movement has led to the exploration of non-representational forms
+        and had a significant impact on contemporary art's freedom of expression. </span>
+
+      Pop Art
+      <span class="description">A pivotal movement that blurred the boundaries between 'high' art and popular culture,
+        leading to innovative use of imagery from mass culture.</span>
+    </p>
+
+
+    <p>
+      For more on this topic, you might find my
+      <a href="https://lib.siena.edu/c.php?g=192774&p=1272621" target="_blank">
+        art history research page</a> useful.
+    </p>
+
+    <p>
+      Best Regards,
+      <br>Prof. Alex Hartley
+    </p>
+
+    <p style="font-size: 14px;">
+      <br><span class=" description">Siena College motto: "The Education for a Lifetime"</span>
+    </p>
+  </div>
+
+</body>
+
 </html>
