fixed files and completed lab4 (NavBar)

--- a/myflex.html
+++ b/myflex.html
@@ -7,10 +7,10 @@
 <link rel="stylesheet" href="myflex.css">
 
 
-</head>
+</head> 
 <body>
     <header>
-        <h1>FlexBox practice</h1>
+        <h1>FlexBox Practice</h1>
     </header>
 
     <main>
