Project 1 Web App Added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-<title>Lexi Randt</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lexi R.</title>
+    <link rel="stylesheet" href="commonstyles.css">
 </head>
+
 <body>
+    <nav class="navbar">
+        <ul>
+            <li class = "active"><a href="#index.html">Home</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="mywork.html">My Work</a></li>
+        </ul>
+    </nav>
 
-<h1>Lexi Randt</h1>
-<p>Website coming soon!</p>
-
+    <div class="index-container">
+        <div class="index-left-section">
+            <h1 class="index-name">Lexi Randt</h1>
+            <div class="index-profile-background">
+                <div class="blob"></div>
+                <div class="blob"></div>
+            <img src="pic-of-me.jpeg" alt="I'm Lexi!" class="index-profile-pic">
+            </div>
+            <div class="index-roles-container">
+                <span>Designer</span>
+                <span class="index-centered">Photographer</span>
+                <span>Aspiring Web Developer</span>
+            </div>
+        </div>
+        
+        
+    </div>
 </body>
+
 </html>
